objects/DestObj1__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestObj2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DestObj2</label>
        <referenceTo>DestObj2__c</referenceTo>
        <relationshipLabel>DestObjs1</relationshipLabel>
        <relationshipName>DestObjs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FatalError__c</fullName>
        <label>FatalError</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Permission1__c</fullName>
        <label>Permission1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPicklist__c</fullName>
        <label>TestPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
                <value>
                    <fullName>ef</fullName>
                </value>
                <value>
                    <fullName>gh</fullName>
                </value>
                <value>
                    <fullName>ijk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DestObj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sample_DestObj1</fullName>
        <filterScope>Queue</filterScope>
        <label>Sample</label>
        <queue>Sample</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>DestObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DestObjs1</pluralLabel>
    <recordTypes>
        <fullName>ICMARC</fullName>
        <active>true</active>
        <label>ICMARC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>